[gd_scene load_steps=3 format=3 uid="uid://fwbpvwjygtyb"]

[ext_resource type="Script" path="res://UI/widgets/curve_edit/slope_point.gd" id="1"]
[ext_resource type="Script" path="res://UI/widgets/curve_edit/control_point.gd" id="2"]

[node name="ControlPoint" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2")

[node name="LeftSlope" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("1")
distance = -30.0

[node name="RightSlope" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("1")
distance = 30.0

[connection signal="gui_input" from="." to="." method="_on_ControlPoint_gui_input"]
[connection signal="gui_input" from="LeftSlope" to="LeftSlope" method="_on_ControlPoint_gui_input"]
[connection signal="gui_input" from="RightSlope" to="RightSlope" method="_on_ControlPoint_gui_input"]
